<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2016 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
  <string translatable="false" name="app_name">MarkAR</string>
  <string name="cd_settings">Open settings</string>
  <string name="tt_settings">Settings</string>



  <string name="egg_sheet_title">Save this?</string>
  <string name="egg_sheet_subtitle">Give it a name, a short description, and optional photos.</string>
  <string name="egg_title_hint">Name</string>
  <string name="egg_title_helper"></string>
  <string name="egg_desc_hint">Description</string>
  <string name="egg_desc_helper"></string>
  <string name="egg_media_header">Add media (optional)</string>
  <string name="egg_add_photos">Add photos</string>
  <string name="egg_photo_helper">Take a photo or pick up to 5</string>
  <string name="egg_no_photos">No photos yet.</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_save">Save</string>
  <string name="cd_add_photos">Add photos to this</string>
  <string name="cd_photo_preview_strip">Selected photos preview</string>
  <string name="cd_dictate_title">Dictate title</string>
  <string name="cd_dictate_description">Dictate description</string>
  <string name="cd_cancel">Cancel and close</string>
  <string name="cd_save">Save this?</string>
  <!-- Row buttons -->
  <string name="nearby_row_info">Details</string>
  <string name="nearby_row_select">Select</string>

  <!-- Content descriptions (use with String.format and the anchor title) -->
  <string name="cd_nearby_info">Details for %1$s</string>
  <string name="cd_nearby_select">Select %1$s anchor</string>

  <!-- Types -->
  <string name="nearby_anchor_star">Star</string>
  <string name="nearby_anchor_puzzle">Puzzle</string>

  <!-- Sheet -->
  <string name="nearby_sheet_title">Nearby anchors</string>
  <string name="nearby_sheet_empty">No anchors nearby yet.</string>
  <string name="close">Close</string>

  <!-- Distance formatting (pick m or km in code) -->
  <string name="nearby_distance_m">~%1$.1f m • %2$s</string>
  <string name="nearby_distance_km">~%1$.2f km • %2$s</string>

  <!-- FAB (list button) -->
  <string name="nearby_fab_cd">Show nearby anchors</string>

  <string name="nearby_row_thumbnail">Anchor thumbnail</string>
  <string name="anchor_image">Anchor image</string>

  <!-- Generic -->
  <string name="ok">OK</string>


  <string name="arcore_api_key">AIzaSyCTKfPYnVPRdR_NXhmTjt1iCYi4jJBOQ4A</string>
  <string translatable="false" name="depth_use_explanation">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
  <string translatable="false" name="button_text_enable_depth">Enable</string>
  <string translatable="false" name="button_text_disable_depth">Disable</string>
  <string translatable="false" name="options_title_with_depth">Your device supports depth</string>
  <string translatable="false" name="options_title_without_depth">Your device does not support depth</string>
  <string translatable="false" name="done">Done</string>
  <string-array translatable="false" name="depth_options_array">
    <item>Enable depth</item>
    <item>Show depth map</item>
  </string-array>
  <string translatable="false" name="options_title_instant_placement">Instant Placement options</string>
  <string-array translatable="false" name="instant_placement_options_array">
    <item>Enable Instant Placement</item>
  </string-array>

</resources>
